syntax = "proto3";

package com.github.connect.model.proto;
option java_package = "com.github.peng.connect.model.proto";
option java_outer_classname = "Account";

message Authenticate{


  string jwt = 1;

  AccountInfo accountInfo = 2;


}

message AccountInfo{

  string account = 1 ;

  string accountName = 2 ;

  int64 userId  = 3 ;

  string eMail = 4 ;

}