syntax = "proto3";

package com.github.meeting.common.connect.model.proto;
option java_package = "com.github.meeting.common.connect.model.proto";
option java_outer_classname = "Chat";
import "google/protobuf/any.proto";
import "Account.proto";


message ChatMessage  {

  int64 msgId = 1 ;

  int64 sessionId = 5 ;

  string content  = 3 ;

  AccountInfo fromAccountInfo = 2 ;

  AccountInfo toAccountInfo = 8 ;

  MessageType type = 6 ;

  google.protobuf.Any chat = 10;


  MessagesStatus messagesStatus = 11; ;

  message Group{

    float sessionId = 1 ;

    repeated string toAccounts = 8 ;  // the receive  account

  }

  message Single{
    float toAccount = 1;
  }


  enum MessagesStatus{

      REJECT = 0 ;

      OFFLINE = 1 ;

      SENTFAIL = 7 ;

      HISTORY = 10 ;

      READ = 3 ;

      UNREAD = 2 ;

      SENT = 5 ;

      UNSENT = 11 ;


  }


}
enum MessageOperationType{

  SEND = 0 ;

  RECEIVE = 1 ;


}


enum MessageType{

  TEXT = 0 ;

  MARKDOWN = 5;

  FILE = 1 ;

  STREAM = 2 ;

  VIDEO = 3 ;

}